fixed button on small screens

--- a/main.css
+++ b/main.css
@@ -12,12 +12,13 @@ body, pre {
 	width: 100%;
 	height: 100vh;
 	background: url(images/hookah-head.png) bottom center / 600px no-repeat #fbde44ff;
+	text-align: center;
 }
 
 form {
 	margin-left: auto;
 	margin-right: auto;
-	width: 99%;
+	width: 100%;
 	text-align: center;
 }
 
@@ -28,7 +29,7 @@ form {
 	border-radius: 1px;
 	margin-top: 15vh;
 	width: 300px;
-	text-align: Center;
+	text-align: center;
 }
 
 button {
@@ -73,9 +74,11 @@ button {
 h1 {
 	font-family: 'Roboto Slab', serif;
 	font-size: 32px;
-	padding-left: 40px;
 	padding-top: 18vh;
-	padding-right: 15px;
+	padding-left: 5%;
+	padding-right: 5%;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .lil-error {
@@ -156,6 +159,12 @@ h1 {
 footer {
 	background-color: #fbde44ff;
 	padding: 50px 20px;
+	display: flex;
+}
+
+footer button {
+margin-left: auto;
+margin-right: auto;
 }
 
 @media screen and (min-width: 700px) {
